# emergent-gr-closure-repro

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  RELEASE_v1_0_0.md  pyproject.toml
data/: SHA256SUMS  a1_regime_constants.json  atiyah_singer_discrete_index.json  causal_wave_transport_equation_probe_bundle.json  cc_dressing_pipeline.json  chirality_weighted_aicc.json  clp_scores.json  continuum_limit_proof.json  cosmological_constant_closure.json  dimension_and_arrow_closure.json  einstein_gap_18point_frobenius.json  einstein_gap_chirality_within_p5.json  einstein_gap_p1_to_p6.json  einstein_gap_richardson_within_p5.json  einstein_metric_stress_multiN.json  emergent_time_closure.json  federer_prefactor_galerkin_fem_derivation.json  framework_beta_function.json  galerkin_robustness_gpu.json  galerkin_runner_A_hessian_ricci.json  galerkin_runner_D_basis_invariance.json  galerkin_schwarzschild_defect_gpu.json  graviton_cpt_closure.json  inflation_closure.json  integer_uniqueness_scan.json  lambda_exact_recompute.json  lambda_exact_section_14_1.json  lambda_t_over_t00_ratio_candidates.json  lambda_t_residual_scaling_exponent.json  lambda_t_within_p5_5point.json  lattice_topological_observables_9point.json  lattice_trivial_contributions_9point.json  lattice_trivial_contributions_extension_P5N.json  lorentzian_3plus1.json  matter_core_seed_stability_within_p5.json  median_floor_truncation_artefact.json  multi_n_extension.json  n18_closure_quality.json  ppn_results.json  subleading_federer_corrections.json  (+6 more)
notes/: lemma_B_proof_strategy.md  lemma_B_statement.md  (+5 more)
(+660 files in other folders)
